--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dotenv": "^16.4.1",
     "lucide-react": "^0.330.0",
     "recharts": "^2.12.0",
-    "@google/genai": "^0.1.1",
+    "@google/genai": "*",
     "html5-qrcode": "^2.3.8",
     "xlsx": "^0.18.5",
     "html2canvas": "^1.4.1",
